feat: finishing header and adding footer

--- a/html/app/assets/css/style.css
+++ b/html/app/assets/css/style.css
@@ -100,21 +100,252 @@ em {
 }
 
 strong {
-  font-family: "Roboto";
+  font-family: "Montserrat";
   font-weight: 700;
 }
 
 /*------------------------------------*\
     FORM
 \*------------------------------------*/
+a.btn,
+[type=submit].btn,
+button.btn {
+  font-family: "Montserrat";
+  font-weight: 700;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 16px;
+  flex-shrink: 0;
+  border-radius: 8px;
+  background-color: transparent;
+  border: 0 solid transparent;
+  color: #5DCB99;
+}
+a.btn-primary,
+[type=submit].btn-primary,
+button.btn-primary {
+  font-family: "Montserrat";
+  font-weight: 700;
+  border: 2px solid #5DCB99;
+  background: #5DCB99;
+  color: #FFFFFF !important;
+}
+a.btn-primary:hover,
+[type=submit].btn-primary:hover,
+button.btn-primary:hover {
+  border: 2px solid rgba(93, 203, 153, 0.5);
+  background: rgba(93, 203, 153, 0.5);
+  color: #FFFFFF !important;
+}
+a.btn-primary:disabled,
+[type=submit].btn-primary:disabled,
+button.btn-primary:disabled {
+  background: black;
+  border: 0;
+  color: #FFFFFF !important;
+}
+a.btn-secondary,
+[type=submit].btn-secondary,
+button.btn-secondary {
+  font-family: "Montserrat";
+  font-weight: 700;
+  border: 2px solid #CB995D;
+  background: #FFFFFF;
+  color: #CB995D;
+}
+a.btn-secondary:hover,
+[type=submit].btn-secondary:hover,
+button.btn-secondary:hover {
+  background-color: #000000;
+  color: #CB995D;
+}
+a.btn-secondary:disabled,
+[type=submit].btn-secondary:disabled,
+button.btn-secondary:disabled {
+  background: #FFFFFF;
+  border: 0;
+  color: #000000;
+}
+a.btn-secondary:disabled:hover,
+[type=submit].btn-secondary:disabled:hover,
+button.btn-secondary:disabled:hover {
+  background-color: #000000;
+  color: #CB995D;
+}
+a.btn-link,
+[type=submit].btn-link,
+button.btn-link {
+  font-family: "Montserrat";
+  font-weight: 700;
+  background-color: transparent;
+  color: #5DCB99;
+}
+a.btn-link:hover,
+[type=submit].btn-link:hover,
+button.btn-link:hover {
+  background-color: transparent;
+  color: inherit;
+  text-decoration: underline;
+}
+a.btn:hover-link,
+[type=submit].btn:hover-link,
+button.btn:hover-link {
+  font-family: "Montserrat";
+  font-weight: 700;
+  background-color: transparent;
+  color: #5DCB99;
+}
+a.btn:hover-link:hover,
+[type=submit].btn:hover-link:hover,
+button.btn:hover-link:hover {
+  background-color: transparent;
+  color: #5DCB99;
+  text-decoration: underline;
+}
+a.btn:disabled,
+[type=submit].btn:disabled,
+button.btn:disabled {
+  color: #5DCB99;
+  border: 0;
+  cursor: not-allowed;
+}
+a.btn:focus,
+[type=submit].btn:focus,
+button.btn:focus {
+  outline: 0;
+  box-shadow: 0 0 2px 0.05rem #5DCB99;
+}
+
 /*------------------------------------*\
     HEADER
 \*------------------------------------*/
+body > header {
+  position: fixed;
+  overflow: hidden;
+  z-index: 10;
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  gap: 16px;
+  height: 80px;
+  background-color: #FFFFFF;
+}
+body > header .logo {
+  background-image: url("../../assets/images/sprite.png");
+  background-position: 0px -160px;
+  width: 60px;
+  height: 58px;
+  overflow: hidden;
+  text-indent: -9999px;
+  position: relative;
+  z-index: 11;
+  display: inline-flex;
+}
+body > header .logo a {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+body > header .menu nav {
+  display: none;
+}
+@media (min-width: 79.9375em) {
+  body > header .menu nav {
+    display: inline-flex;
+    align-items: center;
+  }
+}
+body > header .menu nav.nav-menu--open {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 10;
+  display: inherit;
+  width: 100%;
+  height: 100vh;
+  padding: 96px 24px;
+  background-color: #FFFFFF;
+  border-bottom: 2px solid #5DCB99;
+}
+body > header .menu nav.nav-menu--open ul {
+  display: block;
+}
+body > header .menu nav.nav-menu--open ul li {
+  display: inline-block;
+  width: 100%;
+  margin: 0 0 32px;
+}
+body > header .menu nav.nav-menu--close {
+  position: fixed;
+  top: -1000vh;
+  left: 0;
+  z-index: 10;
+  display: inherit;
+  width: 100%;
+  height: 100vh;
+  background-color: #CB995D;
+}
+body > header .menu nav ul {
+  font-family: "Montserrat";
+  font-weight: 700;
+  display: flex;
+  align-items: center;
+  text-transform: uppercase;
+}
+body > header .menu nav ul li {
+  margin: 0 16px;
+  font-size: 0.75rem;
+}
+body > header .menu nav ul li a {
+  color: #CB995D;
+}
+body > header .menu nav ul li a:hover {
+  text-decoration: underline;
+}
+body > header .menu nav ul li a.btn {
+  font-size: 0.75rem;
+}
+body > header .menu nav ul li a.btn:hover {
+  text-decoration: inherit;
+}
+body > header .menu .nav-button {
+  position: relative;
+  z-index: 99999;
+  display: inherit;
+  padding: 8px;
+  background-color: #5DCB99;
+  border: 0;
+}
+@media (min-width: 79.9375em) {
+  body > header .menu .nav-button {
+    display: none;
+  }
+}
+body > header .menu .nav-button .hamburger-box {
+  width: 24px;
+  height: 16px;
+}
+body > header .menu .nav-button .hamburger-inner,
+body > header .menu .nav-button .hamburger-inner::before,
+body > header .menu .nav-button .hamburger-inner::after, body > header .menu .nav-button.is-active .hamburger-inner, body > header .menu .nav-button.is-active .hamburger-inner::before, body > header .menu .nav-button.is-active .hamburger-inner::after {
+  width: 24px;
+  background-color: #FFFFFF;
+}
+body > header .menu .nav-button.is-active {
+  background-color: #5DCB99;
+  transition: 0.5;
+}
+
 /*------------------------------------*\
     BODY
 \*------------------------------------*/
 html {
-  font-family: "Roboto", Tahoma, Verdana, Segoe, sans-serif;
+  font-family: "Montserrat", Tahoma, Verdana, Segoe, sans-serif;
   font-weight: 400;
   width: 100%;
   -webkit-overflow-scrolling: touch;
@@ -129,7 +360,7 @@ html {
 }
 
 body {
-  font-family: "Roboto";
+  font-family: "Montserrat";
   font-weight: 400;
   width: 100%;
   -webkit-overflow-scrolling: touch;
@@ -145,12 +376,39 @@ body {
 /*------------------------------------*\
     MAIN
 \*------------------------------------*/
+main {
+  min-height: calc(100vh - 560px);
+  margin-top: 80px;
+}
+
 /*------------------------------------*\
     SECTION
 \*------------------------------------*/
 /*------------------------------------*\
     FOOTER
 \*------------------------------------*/
+body > footer .footer--container {
+  min-height: 400px;
+  position: relative;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 16px;
+  background-color: #CB995D;
+  color: #FFFFFF;
+}
+body > footer .copyright {
+  min-height: 80px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #5DCB99;
+  font-size: 0.75rem;
+  color: #FFFFFF;
+  text-align: center;
+}
+
 /*------------------------------------*\
     HELPERS
 \*------------------------------------*/
