--- a/html/app/assets/scss/elements/_header.scss
+++ b/html/app/assets/scss/elements/_header.scss
@@ -1,2 +1,156 @@
-header {
+body {
+    & > header {
+        position: fixed;
+        overflow: hidden;
+        z-index: 10;
+
+        display: flex;
+        width: 100%;
+        justify-content: center;
+        align-items: center;
+        gap: 16px;
+
+        height: 80px;
+
+        background-color: color(light);
+
+        .logo {
+            @include sprite($logo);
+            @include hidden-text(screen-reader);
+
+            position: relative;
+            z-index: 11;
+            display: inline-flex;
+
+            a {
+                position: absolute;
+                top: 0;
+                left: 0;
+
+                width: 100%;
+                height: 100%;
+            }
+        }
+
+        .menu {
+            nav {
+                @include responsive(large) {
+                    display: inline-flex;
+                    align-items: center;
+
+                }
+
+                display: none;
+
+                &.nav-menu {
+                    &--open {
+                        position: fixed;
+                        top: 0;
+                        left: 0;
+                        z-index: 10;
+
+                        display: inherit;
+                        width: 100%;
+                        height: 100vh;
+
+                        padding: (space(gg) * 2) space(m);
+
+                        background-color: color(light);
+                        border-bottom: 2px solid color(primary);
+
+                        ul {
+                            display: block;
+
+                            li {
+                                display: inline-block;
+                                width: 100%;
+                                margin: 0 0 space(g);
+                            }
+                        }
+                    }
+
+                    &--close {
+                        position: fixed;
+                        top: -1000vh;
+                        left: 0;
+                        z-index: 10;
+
+                        display: inherit;
+                        width: 100%;
+                        height: 100vh;
+
+                        background-color: color(secondary);
+                    }
+                }
+
+                ul {
+                    @include font(bold);
+
+                    display: flex;
+                    align-items: center;
+
+                    text-transform: uppercase;
+
+                    li {
+                        margin: 0 space(base);
+                        font-size: font-size(small);
+
+                        a {
+                            color: color(secondary);
+
+                            &:hover {
+                                text-decoration: underline;
+                            }
+
+                            &.btn {
+                                font-size: font-size(small);
+
+                                &:hover {
+                                    text-decoration: inherit;
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+
+            .nav-button {
+                @include responsive(large) {
+                    display: none;
+                }
+
+                position: relative;
+
+                z-index: 99999;
+
+                display: inherit;
+                padding: space(p);
+
+                background-color: color(primary);
+                border: 0;
+
+                .hamburger-box {
+                    width: 24px;
+                    height: 16px;
+                }
+
+                .hamburger-inner,
+                .hamburger-inner::before,
+                .hamburger-inner::after,
+                &.is-active .hamburger-inner,
+                &.is-active .hamburger-inner::before,
+                &.is-active .hamburger-inner::after{
+                    width: 24px;
+
+                    background-color: color(light);
+                }
+
+
+                &.is-active {
+                    background-color: color(primary);
+                    transition: .5;
+                }
+            }
+        }
+    }
 }
