--- a/html/app/assets/scss/elements/_header.scss
+++ b/html/app/assets/scss/elements/_header.scss
@@ -117,9 +117,11 @@ body {
             .nav-button {
                 @include responsive(large) {
                     display: none;
+                    float: inherit;
                 }
 
                 position: relative;
+                float: right;
 
                 z-index: 99999;
 
