--- a/html/app/assets/scss/elements/_buttons.scss
+++ b/html/app/assets/scss/elements/_buttons.scss
@@ -5,11 +5,7 @@ button{
 	&.btn {
 		@include font(bold);
 	
-		display: flex;
-		flex-direction: column;
-		justify-content: center;
-		align-items: center;
-		gap: 16px;
+		display: inline-flex;
 		flex-shrink: 0;
 	
 		border-radius: 8px;
@@ -22,17 +18,20 @@ button{
 			@include font(bold);
 
 			border: 2px solid color(primary);
-			background: color(primary);
+			background-color: color(primary);
 			color: color(light) !important;
 
-			&:hover {
+			&:hover,
+			&:active,
+			&:focus {
 				border: 2px solid fade-out($color: color(primary), $amount: .5);
-				background: fade-out($color: color(primary), $amount: .5);
+				border-color: fade-out($color: color(primary), $amount: .5) !important;
+				background-color: fade-out($color: color(primary), $amount: .5) !important;
 				color: color(light) !important;
 			}
 
 			&:disabled {
-				background: fade-in($color: color(dark), $amount: 0.5);
+				background-color: fade-in($color: color(dark), $amount: 0.5);
 				border: 0;
 				color: color(light) !important;
 			}
@@ -42,7 +41,7 @@ button{
 			@include font(bold);
 
 			border: 2px solid color(secondary);
-			background: color(light);
+			background-color: color(light);
 			color: color(secondary);
 
 			&:hover {
@@ -51,7 +50,7 @@ button{
 			}
 
 			&:disabled {
-				background: color(light);
+				background-color: color(light);
 				border: 0;
 				color: color(dark);
 
