--- a/html/app/assets/scss/elements/_section.scss
+++ b/html/app/assets/scss/elements/_section.scss
@@ -1,3 +1,10 @@
 section {
-    
+    h2 {
+        @include font(bold);
+        color: inherit;
+
+        span {
+            border-bottom: 3px solid;
+        }
+    }
 }
