--- a/html/app/assets/scss/elements/_buttons.scss
+++ b/html/app/assets/scss/elements/_buttons.scss
@@ -41,23 +41,22 @@ button{
 			@include font(bold);
 
 			border: 2px solid color(secondary);
-			background-color: color(light);
-			color: color(secondary);
+			background-color: color(secondary);
+			color: color(light);
 
-			&:hover {
-				background-color: color(dark);
-				color: color(secondary);
+			&:hover,
+			&:active,
+			&:focus {
+				border: 2px solid fade-out($color: color(secondary), $amount: .5);
+				border-color: fade-out($color: color(secondary), $amount: .5) !important;
+				background-color: fade-out($color: color(secondary), $amount: .5) !important;
+				color: color(light) !important;
 			}
 
 			&:disabled {
-				background-color: color(light);
+				background-color: fade-in($color: color(dark), $amount: 0.5);
 				border: 0;
-				color: color(dark);
-
-				&:hover {
-					background-color: color(dark);
-					color: color(secondary);
-				}
+				color: color(light) !important;
 			}
 		}
 	
