--- a/WP/app/public/wp-content/themes/michelle-piekarski/style.css
+++ b/WP/app/public/wp-content/themes/michelle-piekarski/style.css
@@ -713,14 +713,16 @@ body > footer .footer--container .soclal-list a:hover {
   text-decoration: underline;
 }
 body > footer .copyright {
+  padding: 22px 0;
   min-height: 80px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   background-color: #5DCB99;
   font-size: 0.75rem;
   color: #FFFFFF;
   text-align: center;
+}
+
+body > footer .copyright small {
+  font-size: 12px;
 }
 
 /*------------------------------------*\
